--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "arcgis",
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "clean": "find ./ -name 'node_modules' -type d -exec rm -rf {} +"
+  },
   "keywords": [
     "react-native",
     "arcgis"
