--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "clean": "find ./ -name 'node_modules' -type d -exec rm -rf {} +"
+    "clean": "find ./ -name 'node_modules' -type d -exec rm -rf {} +",
+    "mobile:android-dev": "pnpm --filter @arcgis/mobile run android"
   },
   "keywords": [
     "react-native",
