--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "clean": "find ./ -name 'node_modules' -type d -exec rm -rf {} +",
+    "clean:android": "cd apps/mobile/android && ./gradlew clean && cd ../../../ && find ./apps/mobile/android -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true",
     "mobile:android-dev": "pnpm --filter @arcgis/mobile run android"
   },
   "keywords": [
