--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
     "react": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.6.1"
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
