chore: install and setup react-native-dotenv

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@mobile/*": ["./src/*"]
-    }
+    },
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   }
 }
