--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -21,7 +21,8 @@
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-svg": "^15.13.0"
+    "react-native-svg": "^15.13.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
