--- a/apps/mobile/.watchmanconfig
+++ b/apps/mobile/.watchmanconfig
@@ -1,1 +1,13 @@
-{}
+{
+  "ignore_dirs": [
+    ".git",
+    "node_modules",
+    "android/build",
+    "android/.gradle",
+    "android/app/build",
+    "android/app/.cxx",
+    "ios/build",
+    "ios/Pods",
+    "ios/DerivedData"
+  ]
+}
