fix: jest lint error

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@mobile/*": ["./src/*"]
     },
-    "typeRoots": ["./src/types", "./node_modules/@types"]
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "types": []
   }
 }
