Add Screen, Navigation Layout, and Auth Logic
* chore: install ans setup react native papper

* chore: config absolute path for mobile app

* chore: add mobile:start script and add .cxx folder to clean script

* chore: add react-navigation package for stack and bottom tabs

* chore: install lucide icon react native and react native svg

* chore: add image assets

* chore: create custom ButtomTabBar comp

* chore: create home, profile, auth, and loading screen layout

* chore: define navigation and its types

* chore: implement new navigation routes

* chore: install and setup react-native-dotenv

* chore: add zod validation for my env

* chore: add tanstack query, zustand, and asyncstorage

* chore: create auth store, hooks, validation, and its types

* chore: remove jest

* chore: fixed zod package peer dependency

* fix: env file

* chore: create zod error-formater utility

* fix: zod error message on useAuth logic

* fix: navigation types

* fix: navigation name on AuthNavigation

* chore: implement auth logic at Login and Register screen

* chore: add config for navigation and tanstack query

* chore: implement route protection before auth process

* chore: add local and recomended config .vscode to github

* chore: implement logout

* fix: jest lint error

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "scripts": {
     "clean": "find ./ -name 'node_modules' -type d -exec rm -rf {} +",
-    "clean:android": "cd apps/mobile/android && ./gradlew clean && cd ../../../ && find ./apps/mobile/android -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true",
+    "clean:android": "find ./apps/mobile/android -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.cxx' -type d -exec rm -rf {} + 2>/dev/null || true",
+    "clean:gradle": "cd apps/mobile/android && ./gradlew clean && cd ../../../",
+    "mobile:start": "pnpm --filter @arcgis/mobile run start",
     "mobile:android-dev": "pnpm --filter @arcgis/mobile run android"
   },
   "keywords": [
