--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "../../node_modules/@react-native/typescript-config/tsconfig.json"
+  "extends": "../../node_modules/@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@mobile/*": ["./src/*"]
+    },
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "types": []
+  }
 }
