--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,6 +19,7 @@
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-location": "workspace:*",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
