--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,62 @@
     "**/ios/Pods": true,
     "**/build": true,
     "**/dist": true
-  }
+  },
+
+  // Java & Android Settings
+  "java.compile.nullAnalysis.mode": "automatic",
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "java.format.enabled": true,
+  "java.saveActions.organizeImports": true,
+
+  // Java project source paths for better resolution
+  "java.project.sourcePaths": [
+    "packages/react-native-location/android/src/main/java",
+    "apps/mobile/android/app/src/main/java"
+  ],
+
+  // Kotlin Language Server Settings
+  "kotlin.languageServer.enabled": true,
+  "kotlin.completion.snippets.enabled": true,
+  "kotlin.linting.enabled": true,
+  "kotlin.formatting.enabled": true,
+
+  // File associations
+  "files.associations": {
+    "*.kt": "kotlin",
+    "*.kts": "kotlin",
+    "*.gradle": "gradle",
+    "*.gradle.kts": "kotlin"
+  },
+
+  // Gradle settings
+  "gradle.nestedProjects": true,
+  "gradle.autoDetection": "on",
+
+  // Enhanced code completion settings
+  "editor.quickSuggestions": {
+    "other": "on",
+    "comments": "off",
+    "strings": "off"
+  },
+  "editor.suggestOnTriggerCharacters": true,
+  "editor.wordBasedSuggestions": "matchingDocuments",
+  "editor.parameterHints.enabled": true,
+  "editor.suggest.showMethods": true,
+  "editor.suggest.showFunctions": true,
+  "editor.suggest.showConstructors": true,
+  "editor.suggest.showFields": true,
+  "editor.suggest.showVariables": true,
+  "editor.suggest.showClasses": true,
+  "editor.suggest.showStructs": true,
+  "editor.suggest.showInterfaces": true,
+  "editor.suggest.showModules": true,
+  "editor.suggest.showProperties": true,
+  "editor.suggest.showEvents": true,
+  "editor.suggest.showOperators": true,
+  "editor.suggest.showKeywords": true,
+  "editor.suggest.showSnippets": true,
+  "editor.acceptSuggestionOnCommitCharacter": true,
+  "editor.acceptSuggestionOnEnter": "on",
+  "editor.tabCompletion": "on"
 }
