--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "clean": "find ./ -name 'node_modules' -type d -exec rm -rf {} +",
     "clean:mobile:android": "find ./apps/mobile/android -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.cxx' -type d -exec rm -rf {} + 2>/dev/null || true",
     "clean:mobile:gradle": "cd apps/mobile/android && ./gradlew clean && cd ../../../",
-    "clean:packages:android": "find ./packages -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./packages -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./packages -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true && find ./packages -name '.cxx' -type d -exec rm -rf {} + 2>/dev/null || true",
+    "clean:package:location": "pnpm --filter @arcgis/location run clean",
     "mobile:start:metro": "pnpm --filter @arcgis/mobile run start",
     "mobile:start:android-dev": "pnpm --filter @arcgis/mobile run android",
-    "mobile:android:codegen": "cd apps/mobile/android && ./gradlew generateCodegenArtifactsFromSchema && cd ../../../"
+    "mobile:android:codegen": "cd apps/mobile/android && ./gradlew generateCodegenArtifactsFromSchema && cd ../../../",
+    "package:location:prepare": "pnpm --filter @arcgis/location run prepare"
   },
   "keywords": [
     "react-native",
