--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,6 +9,7 @@
     "start": "react-native start --reset-cache"
   },
   "dependencies": {
+    "@arcgis/react-native-location": "workspace:*",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
@@ -19,7 +20,6 @@
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-location": "workspace:*",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
