--- a/packages/react-native-location/android/build.gradle
+++ b/packages/react-native-location/android/build.gradle
@@ -1,6 +1,20 @@
 buildscript {
   ext.getExtOrDefault = {name ->
-    return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties['Location_' + name]
+    if (rootProject.ext.has(name)) {
+      return rootProject.ext.get(name)
+    } else if (project.hasProperty('Location_' + name)) {
+      return project.property('Location_' + name)
+    } else {
+      // Fallback values for standalone builds
+      switch(name) {
+        case 'compileSdkVersion': return 35
+        case 'targetSdkVersion': return 35
+        case 'minSdkVersion': return 24
+        case 'buildToolsVersion': return '35.0.0'
+        case 'kotlinVersion': return '2.0.21'
+        default: return null
+      }
+    }
   }
 
   repositories {
@@ -22,7 +36,19 @@ apply plugin: "kotlin-android"
 apply plugin: "com.facebook.react"
 
 def getExtOrIntegerDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["Location_" + name]).toInteger()
+  if (rootProject.ext.has(name)) {
+    return rootProject.ext.get(name)
+  } else if (project.hasProperty("Location_" + name)) {
+    return (project.properties["Location_" + name]).toInteger()
+  } else {
+    // Fallback values for standalone builds
+    switch(name) {
+      case 'compileSdkVersion': return 35
+      case 'targetSdkVersion': return 35
+      case 'minSdkVersion': return 24
+      default: return 35 // Default fallback
+    }
+  }
 }
 
 android {
