Create and setup Native Location Module (#2)
* chore: create initial location package

* chore: fixed module peer dependencies warning

* chore: update spec on native location module

* chore: enhance Java and Kotlin settings in VSCode configuration

* chore: update build.gradle for improved IntelliSense and dependency management

* chore: add location permissions to AndroidManifest.xml for react-native-location

* chore: remove unused location update methods from NativeLocationModule

* chore: remove unused location update methods and event listeners from Location class

* chore: implement LocationModule and LocationPackage for enhanced location services

* chore: migrate CI setup from Yarn to pnpm and streamline dependency management

* Remove iOS example project files for react-native-location package, including Xcode scheme, AppDelegate, assets, Info.plist, LaunchScreen storyboard, privacy info, Podfile, Jest and Metro configurations, package.json, react-native.config.js, and main App component.

* chore: remove unused example project files from react-native-location package

* chore: add LocationModule and LocationPackage for location services integration

* chore: update javaPackageName in react-native-location package for consistency

* chore: update clean scripts in package.json for location package integration

* chore: update package references for @arcgis/react-native-location and clean up pnpm-lock.yaml

* chore: add LocationPackage for location services integration

* chore: update VSCode settings to exclude additional Android directories

* chore: enhance build.gradle to include fallback values for buildToolsVersion and kotlinVersion

* chore: update VSCode settings to exclude additional paths for react-native-location package

* chore: update pnpm-lock.yaml to add missing react-native-location paths and upgrade electron-to-chromium version

* chore: refactor LocationModule to implement NativeLocationModuleSpec and update LocationPackage for TurboModul

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "scripts": {
     "clean": "find ./ -name 'node_modules' -type d -exec rm -rf {} +",
-    "clean:android": "find ./apps/mobile/android -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.cxx' -type d -exec rm -rf {} + 2>/dev/null || true",
-    "clean:gradle": "cd apps/mobile/android && ./gradlew clean && cd ../../../",
-    "mobile:start": "pnpm --filter @arcgis/mobile run start",
-    "mobile:android-dev": "pnpm --filter @arcgis/mobile run android"
+    "clean:mobile:android": "find ./apps/mobile/android -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.cxx' -type d -exec rm -rf {} + 2>/dev/null || true",
+    "clean:mobile:gradle": "cd apps/mobile/android && ./gradlew clean && cd ../../../",
+    "clean:package:location": "pnpm --filter @arcgis/react-native-location run clean",
+    "mobile:start:metro": "pnpm --filter @arcgis/mobile run start",
+    "mobile:start:android-dev": "pnpm --filter @arcgis/mobile run android",
+    "mobile:android:codegen": "cd apps/mobile/android && ./gradlew generateCodegenArtifactsFromSchema && cd ../../../",
+    "package:location:prepare": "pnpm --filter @arcgis/react-native-location run prepare"
   },
   "keywords": [
     "react-native",
@@ -15,5 +18,9 @@
   ],
   "author": "alee@otechq.com",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=10.15.1"
+  },
   "packageManager": "pnpm@10.15.1"
 }
