--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,6 +9,7 @@
     "start": "react-native start --reset-cache"
   },
   "dependencies": {
+    "@arcgis/react-native-location": "workspace:*",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
