--- a/packages/react-native-location/package.json
+++ b/packages/react-native-location/package.json
@@ -62,7 +62,7 @@
     "@evilmartians/lefthook": "^1.12.3",
     "@react-native-community/cli": "20.0.1",
     "@react-native/babel-preset": "0.79.6",
-    "@react-native/eslint-config": "^0.81.1",
+    "@react-native/eslint-config": "0.79.6",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.0",
