feat: update clean scripts and add codegen for react-native-location; modify java package name for react-native-arcgis-map

--- a/packages/react-native-arcgis-map/package.json
+++ b/packages/react-native-arcgis-map/package.json
@@ -147,7 +147,7 @@
     "type": "all",
     "jsSrcsDir": "src",
     "android": {
-      "javaPackageName": "com.arcgismap"
+      "javaPackageName": "com.arcgismapspec"
     },
     "ios": {
       "componentProvider": {
