--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "clean": "find ./ -name 'node_modules' -type d -exec rm -rf {} +",
-    "clean:mobile:android": "find ./apps/mobile/android -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.cxx' -type d -exec rm -rf {} + 2>/dev/null || true",
+    "clean:mobile:android": "find ./apps/mobile/android -name 'build' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.kotlin' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.gradle' -type d -exec rm -rf {} + 2>/dev/null || true && find ./apps/mobile/android -name '.cxx' -type d -exec rm -rf {} + 2>/dev/null || true && rm -rf ./apps/mobile/build",
+    "clean:mobile:build": "rm -rf ./apps/mobile/build",
     "clean:mobile:gradle": "cd apps/mobile/android && ./gradlew clean && cd ../../../",
     "clean:package:location": "pnpm --filter @arcgis/react-native-location run clean",
     "clean:package:arcgis": "pnpm --filter @arcgis/react-native-arcgis-map run clean",
