feat: update minimum SDK version and Java/Kotlin compatibility in build.gradle; add Gradle sync troubleshooting documentation

--- a/apps/mobile/android/build.gradle
+++ b/apps/mobile/android/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         buildToolsVersion = "35.0.0"
-        minSdkVersion = 24
+        minSdkVersion = 26
         compileSdkVersion = 35
         targetSdkVersion = 35
         ndkVersion = "27.1.12297006"
@@ -19,3 +19,18 @@ buildscript {
 }
 
 apply plugin: "com.facebook.react.rootproject"
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+
+        // Esri repository for ArcGIS Maps SDK
+        maven {
+            url 'https://esri.jfrog.io/artifactory/arcgis'
+        }
+
+        // React Native repositories
+        maven { url("https://www.jitpack.io") }
+    }
+}
