feat: update source directories for generated Java and JNI code in build.gradle

--- a/packages/react-native-arcgis-map/android/build.gradle
+++ b/packages/react-native-arcgis-map/android/build.gradle
@@ -86,8 +86,8 @@ android {
   sourceSets {
     main {
       java.srcDirs += [
-        "generated/java",
-        "generated/jni"
+        "build/generated/source/codegen/java",
+        "build/generated/source/codegen/jni"
       ]
     }
   }
